--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-python ==3.10.11
-gunicorn
-mediapipe
-opencv-python
-flask
-flask_cors
+python 
+pandas
 numpy
-scipy
 matplotlib
+seaborn
+streamlit
+scipy
